--- a/NeutronMail/css/style.css
+++ b/NeutronMail/css/style.css
@@ -5,4 +5,47 @@ html{
 
 body {
   font-size: 0.875rem;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
+
+.main{
+  flex: 1;
+  background: #ffffff url('../assets/image/main.jpg') top center no-repeat;
+  background-size: 100% auto;
+}
+
+/* - - - - - - - - - - HEADER START - - - - - - - - - - */
+
+.header{
+  max-width: 112.5rem;
+  margin: 5rem auto 0;
+}
+
+/*__________ Navigation Start __________*/
+
+.nav-list{
+  margin: 0;
+  list-style-type: none;
+  padding: 0;
+}
+
+.nav-list-item{
+  display: inline-block;
+}
+
+.nav-list-link{
+  padding: 0 0.8125rem;
+  line-height: 2.5;
+  color: #454545;
+  text-decoration: none;
+}
+
+.nav-list-link:hover{
+  text-decoration: underline;
+}
+
+/*__________ Navigation End __________*/
+
+/* - - - - - - - - - - HEADER END - - - - - - - - - - */
