--- a/NeutronMail/css/style.css
+++ b/NeutronMail/css/style.css
@@ -16,6 +16,22 @@ body {
   background-size: 100% auto;
 }
 
+button{
+  transition: all 0.5s ease-in-out;
+}
+
+.dark-blue-btn{
+  background: var(--login-blue-btn-bg);
+  color: #ffffff;
+  box-shadow: var(--dark-blue-shadow);
+  opacity: 0.9;
+}
+    
+.dark-blue-btn:hover{
+  box-shadow: var(--dark-blue-shadow-hover);
+  opacity: 1;
+}
+
 /* - - - - - - - - - - HEADER START - - - - - - - - - - */
 
 .header{
@@ -24,6 +40,32 @@ body {
 }
 
 /*__________ Navigation Start __________*/
+
+.header-row-1{
+  display: flex;
+  justify-content: space-between;
+}
+
+.header-logo{
+  font-size: 1.875rem;
+  color: #858688;
+  font-weight: bold;
+}
+
+.header-logo span{
+  color: #5b4295;
+}
+
+.logo-link{
+  text-decoration: none;
+  color: inherit;
+  line-height: 2.5rem;
+}
+
+.right-controls-wrapper{
+  display: flex;
+  align-items: center;
+}
 
 .nav-list{
   margin: 0;
@@ -37,6 +79,7 @@ body {
 
 .nav-list-link{
   padding: 0 0.8125rem;
+  font-size: 1rem;
   line-height: 2.5;
   color: #454545;
   text-decoration: none;
@@ -46,6 +89,89 @@ body {
   text-decoration: underline;
 }
 
+.login-buttons{
+  margin-left: 2.8125rem;
+  display: flex;
+  font-size: 1rem;
+}
+
+.header-btn{
+  height: 2.5rem;
+  padding: 0 1.25rem;
+  border-radius: 1.25rem;
+  border: none; 
+  font-weight: bold;
+  transition-duration: 0.2s;
+}
+
+.header-btn:hover{
+  cursor: pointer;
+}
+
+.login-btn{
+  background-color: #ffffff;
+  color: #454545;
+}
+
+.login-btn i{
+  color: #582c7e;
+  margin-right: 0.5rem;
+}
+
+.login-btn:hover{
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.15);
+  background-color: #f5f5f5;
+}
+
 /*__________ Navigation End __________*/
+
+/*__________ Language Switcher Start __________*/
+
+.lang-switcher{
+  margin-top: 1rem;
+}
+
+.lang-switcher-list{
+  margin: 0;
+  padding: 0;
+}
+
+.lang-switcher-list-item{
+  display: inline-block;
+  position: relative;
+  color: #959595;
+}
+
+.lang-switcher-list-item.current{
+  font-weight: bold;
+}
+
+.lang-switcher-list-item:not(:last-of-type)::after{
+  content: '/';
+  width: 1.6875rem;
+  text-align: center;
+  display: inline-block;
+
+}
+
+.lang-switcher-link{
+  text-decoration: none;
+  color: currentColor;
+  position: relative;
+}
+
+.lang-switcher-link:hover::before,
+.lang-switcher-list-item.current .lang-switcher-link::before{
+  content: '';
+  display: inline-block;
+  position: absolute;
+  width: 100%;
+  height: 1px;
+  left: 0;
+  top: calc(100% + 2px);
+  background-color: #bfc5d4;
+}
+
+/*__________ Language Switcher End __________*/
 
 /* - - - - - - - - - - HEADER END - - - - - - - - - - */
