--- a/NeutronMail/css/variables.css
+++ b/NeutronMail/css/variables.css
@@ -1,6 +1,16 @@
 :root {
   --light-blue-btn-bg: linear-gradient(90deg, #35bbe0 0%,#5e7bea 100%);
   --light-blue-shadow:  
+    0 7px 9px 0 rgba(26, 230, 218, 0.15),
+    0 13px 21px 0 rgba(26, 230, 218, 0.27), 
+    0 13px 21px 0 rgba(0, 0, 0, 0.15), 
+    0 4px 16px 0 rgba(26, 230, 218, 0.33), 
+    0 4px 16px 0 rgba(0, 0, 0, 0.09), 
+    0 3px 9px 0 rgba(26, 230, 218, 0.09), 
+    0 3px 9px 0 rgba(0, 0, 0, 0.09), 
+    0 3px 3px 0 rgba(26, 230, 218, 0.09), 
+    0 3px 3px 0 rgba(0, 0, 0, 0.17);
+  --light-blue-shadow-hover:  
     0 0px 7px 0 rgba(95, 47, 106, 0.25),
     0 7px 9px 0 rgba(26, 230, 218, 0.15),
     0 13px 21px 0 rgba(26, 230, 218, 0.27), 
