--- a/NeutronMail/css/style.css
+++ b/NeutronMail/css/style.css
@@ -345,16 +345,185 @@ button{
 /* - - - - - - - - - - FOOTER START - - - - - - - - - - */
 
 .footer{
-  display: flex;
+  width: calc(100% / 9 * 7);
+  padding-left: calc(100% / 9);
+  position: relative;
+}
+
+.footer::after{
+  content: '';
+  position: absolute;
+  right: 28.125rem;
+  top: 0;
+  height: 100%;
+  width: 1px;
+  background-color: #b9b9b9;
 }
 
 .footer__section{
   border-top: 1px solid #b9b9b9;
-  width: calc(100% / 9 * 7);
 }
 
+.footer_row-1{
+  margin-bottom: 5.375rem; 
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+}
 
-/*__________ Privacy Section Start __________*/
-/*__________ Privacy Section Start __________*/
+.contacts{
+  padding-left: 1.75rem;
+  position: relative;
+}
+
+.contacts::before{
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 1px;
+  height: 100%;
+  background-color: #b9b9b9;
+}
+
+.contacts__item{
+  color: #5c5c5c;
+  font-size: 0.875rem;
+  line-height: 1.4375rem;
+}
+
+.contacts__item:first-of-type{
+  margin-top: -3px;
+}
+
+.contacts__link{
+  font-weight: bold;
+  text-decoration: none;
+  color: inherit;
+  position: relative;
+}
+
+.contacts__link:hover::after{
+  content: '';
+  position: absolute;
+  bottom: 1px;
+  left: 0;
+  width: 100%;
+  height: 2px;
+  background-color: #d6d6d6;
+  z-index: -1;
+}
+
+.site-map{
+  display: flex;
+  flex-wrap: wrap;
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+  color: #5c5c5c;
+}
+
+.site-map__item{
+  margin-right: 1.75rem;
+}
+
+.site-map__item--mail{
+  width: 10.75rem;
+}
+
+.site-map__item--legal{
+  width: 13.875rem;
+}
+
+.site-map__item--company{
+  width: 8.25rem;
+}
+
+.site-map__list-title{
+  font-weight: bold;
+  font-size: 1.125rem;
+  text-align: right;
+  display: block;
+  margin-bottom: 1.875rem;
+}
+
+.site-map__list{
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+
+.site-map__list-item{
+  text-align: right;
+  font-size: 0.875rem;
+  line-height: 1.5rem;
+  position: relative;
+  padding-right: 0.625rem;
+}
+
+.site-map__list-item::after{
+  content: '';
+  position: absolute;
+  right: 0;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 3px;
+  height: 3px;
+  border-radius: 50%;
+  background-color: #5c5c5c;
+}
+
+.site-map__link{
+  color: inherit;
+  text-decoration: none;
+}
+
+.site-map__link:hover{
+  text-decoration: underline
+}
+
+.socials__list{
+  display: flex;
+  margin: 0;
+  list-style-type: none;
+  padding: 0;
+  font-size: 0.75rem;
+  margin-bottom: 1.25rem;
+}
+
+.socials__list-item:not(:last-child):after{
+  content: '/';
+  display: inline-block;
+  padding: 0 .875rem;
+}
+
+.socials__link{
+  color: #5c5c5c;
+  text-decoration: none;
+  position: relative;
+  display: inline-block;
+  line-height: 1;
+}
+
+.socials__link:after{
+  content: '';
+  position: absolute;
+  top: 100%;
+  left: 0;
+  width: 100%;
+  height: 1px;
+  background-color: #b9b9b9;
+  z-index: -1;
+}
+
+.socials__link:hover::after{
+  background-color: #5c5c5c;
+}
+
+.copyright{
+  color: #5c5c5c;
+  font-size: 0.75rem;
+  margin-bottom: 2rem;
+}
 
 /* - - - - - - - - - - FOOTER END - - - - - - - - - - */
