--- a/NeutronMail/css/style.css
+++ b/NeutronMail/css/style.css
@@ -9,6 +9,32 @@ body {
   flex-direction: column;
   min-height: 100vh;
   min-width: 20rem;
+  position: relative;
+}
+
+body::before,
+body::after{
+  content: '';
+  position: absolute;
+  z-index: -1;
+}
+
+body::before{
+  top: 53%;
+  left: 0;
+  width: 100%;
+  height: 47%;
+  background: -webkit-linear-gradient(67.5deg, #ffffff 50%,#eeeeee 100%);
+}
+
+body::after{
+  top: 53%;
+  left: 0;
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 10vw 100vw 0 0;
+  border-color: #ffffff transparent transparent transparent;
 }
 
 *{
@@ -17,7 +43,7 @@ body {
 
 .main{
   flex: 1;
-  background: #ffffff url('../assets/image/main.jpg') top center no-repeat;
+  background: transparent url('../assets/image/main.jpg') top center no-repeat;
   background-size: 100% auto;
 }
 
