--- a/CodeJam-dom_Palette/css/styles.css
+++ b/CodeJam-dom_Palette/css/styles.css
@@ -1,3 +1,164 @@
 html{
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  min-width: 320px;
+  height: 100%;
 }
+
+body{
+  color: rgba(0, 0, 0, 0.54);
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
+}
+
+input.hidden:focus + label,
+input:not(.hidden):focus,
+button:focus,
+a:focus{
+  outline: none;
+  box-shadow: 0 .125rem .25rem rgba(0,0,0,.15);
+}
+
+.hidden{
+  position: absolute !important;
+  height: 1px !important;
+  width: 1px !important;
+  margin: 0 !important;
+  padding: 0 !important;
+  border: 0 !important;
+  overflow: hidden !important;
+  clip: rect(0 0 0 0) !important;
+}
+
+/* * * * * * * * * * HEADER START * * * * * * * * * */
+
+.header{
+  position: relative;
+}
+
+.header__title{
+  font-size: 1.5rem;
+  line-height: 2;
+  margin: 0;
+}
+
+/*--------------- Header Burger Start ---------------*/
+
+.navigation__collapse_label{
+  width: 2.5rem;
+  height: 2.5rem;
+  margin-left: 0.5rem;
+  margin-right: 1.5rem;
+  display: block;
+  flex-shrink: 0;
+  background: none;
+  border: none;
+  position: relative;
+}
+
+.navigation__collapse_label_text{
+  font-size: 0;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.navigation__collapse_label_text::after,
+.navigation__collapse_label_text::before{
+  content: '';
+  left: 0;
+}
+
+.navigation__collapse_label_text,
+.navigation__collapse_label_text::after,
+.navigation__collapse_label_text::before{
+  position: absolute;
+  display: inline-block;
+  width: 1.125rem;
+  height: 0.125rem;
+  background-color: rgba(0, 0, 0, 0.54);
+  transition-duration: 0.3s;
+}
+
+.navigation__collapse_label_text::after{
+  bottom: 0.3125rem;
+}
+.navigation__collapse_label_text::before{
+  top: 0.3125rem;
+}
+
+.navigation__collapse:checked+.navigation__collapse_label .navigation__collapse_label_text{
+  background-color: transparent;
+}
+
+.navigation__collapse:checked+.navigation__collapse_label .navigation__collapse_label_text::after,
+.navigation__collapse:checked+.navigation__collapse_label .navigation__collapse_label_text::before{
+  bottom: 1px;
+  top: 1px;
+}
+
+.navigation__collapse:checked+.navigation__collapse_label .navigation__collapse_label_text::before{
+  transform: rotateZ(-45deg);
+}
+
+.navigation__collapse:checked+.navigation__collapse_label .navigation__collapse_label_text::after{
+  transform: rotateZ(45deg);
+}
+
+/*--------------- Header Burger End ---------------*/
+
+/*--------------- Header Menu Start ---------------*/
+
+.menu__collapse{
+  position: absolute;
+  top: calc(50% - 0.25rem);
+  right: 1rem;
+  transform: translateY(-50%);
+  border: none;
+  background: none;
+  width: 0.75rem;
+  height: 1.5rem;
+  font-size: 0;
+}
+
+.menu__collapse span{
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.menu__collapse span::before,
+.menu__collapse span::after{
+  content: '';
+  left: 0;
+}
+
+.menu__collapse span,
+.menu__collapse span::before,
+.menu__collapse span::after{
+  position: absolute;
+  width: 0.25rem;
+  height: 0.25rem;
+  border-radius: 50%;
+  background-color: rgba(0, 0, 0, 0.54);
+}
+  
+.menu__collapse span::before{
+  bottom: 0.375rem;
+}
+
+.menu__collapse span::after{
+  top: 0.375rem;
+}
+
+/*--------------- Header Menu End ---------------*/
+
+/* * * * * * * * * * HEADER END * * * * * * * * * */
+
+/* * * * * * * * * * MAIN START * * * * * * * * * */
+
+.main{
+  flex: 1;
+}
+
+/* * * * * * * * * * MAIN END * * * * * * * * * */
