--- a/CodeJam-dom_Palette/css/styles.css
+++ b/CodeJam-dom_Palette/css/styles.css
@@ -174,10 +174,7 @@ a:focus{
   align-self: stretch;
   display: flex;
   flex-direction: column;
-}
-
-.pallet__tools_wrapper{
-  flex: 1;
+  justify-content: space-around;
 }
 
 .pallet__tools_block:not(:last-of-type){
@@ -193,7 +190,7 @@ a:focus{
   cursor: pointer;
 }
 
-.pallet__tools_item:hover .pallet__colors_item_title{
+.pallet__tools_item:hover .pallet__tools_item_title{
   font-weight: 600;
   text-decoration: underline;
 }
@@ -205,6 +202,16 @@ a:focus{
   border: 1px solid #000000;
   flex-shrink: 0;
   margin: 1.125rem;
+}
+
+.pallet__tools_item_icon{
+  width: 1.25rem;
+  height: 1.25rem;
+  margin: 1.125rem;
+}
+
+.pallet__tools--tools .pallet__tools_item.current{
+  background-color: #f3f3f3;
 }
 
 /*--------------- Pallet Menu End ---------------*/
