feat: implement all functionality, accept blocks moving

--- a/palette/css/styles.css
+++ b/palette/css/styles.css
@@ -30,6 +30,14 @@ a:focus{
   clip: rect(0 0 0 0) !important;
 }
 
+.noselect {
+  -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+     -khtml-user-select: none; /* Konqueror HTML */
+       -moz-user-select: none; /* Firefox */
+        -ms-user-select: none; /* Internet Explorer/Edge */
+            user-select: none;
+}
 /* * * * * * * * * * HEADER START * * * * * * * * * */
 
 .header{
