--- a/palette/css/styles.css
+++ b/palette/css/styles.css
@@ -189,6 +189,12 @@ a:focus{
   margin-bottom: 1rem;
 }
 
+.pallet__tools {
+  position: relative;
+  z-index: 1;
+  background-color: #ffffff;
+}
+
 .pallet__tools_block:not(:last-of-type){
   border-bottom: 1px solid rgba(0, 0, 0, 0.12);
 }
@@ -253,13 +259,18 @@ a:focus{
   grid-gap: 0.5rem;
 }
 
+.canvas__block_wrapper{
+  position: relative;
+}
+
 .canvas__block.round {
   border-radius: 50%;
 }
 
 .canvas__block {
-  position: relative;
-  transition-duration: 300ms;
+  position: absolute;
+  width: 100%;
+  height: 100%;
 }
 
 .canvas__block:hover{
