--- a/palette/css/styles.css
+++ b/palette/css/styles.css
@@ -19,6 +19,10 @@ a:focus{
   box-shadow: 0 .125rem .25rem rgba(0,0,0,.15);
 }
 
+.shadow{
+  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
+}
+
 .hidden{
   position: absolute !important;
   height: 1px !important;
@@ -42,6 +46,7 @@ a:focus{
 
 .header{
   position: relative;
+  display: flex;
 }
 
 .header__title{
