--- a/youtube-client/src/App/Carousel/Carousel.css
+++ b/youtube-client/src/App/Carousel/Carousel.css
@@ -1,7 +1,32 @@
+:root{
+  --clips-per-page: 1;
+  --current-page: 0;
+  --item-width: calc(100vw / var(--clips-per-page));
+}
+
+@media screen and (min-width: 480px){
+  :root{
+    --clips-per-page: 2;
+  }
+}
+
+@media screen and (min-width: 768px){
+  :root{
+    --clips-per-page: 3;
+  }
+}
+
+@media screen and (min-width: 1024px){
+  :root{
+    --clips-per-page: 4;
+  }
+}
+
 .carousel{
   flex: 1;
   background: url('../../assets/img/youtube.svg') no-repeat center;
-  background-size: 17rem auto;
+  background-size: 12rem auto;
+  overflow: hidden;
 }
 
 .carousel-error{
@@ -11,6 +36,125 @@
 }
 
 .carousel__list{
-  margin: 1rem;
+  margin: 0;
   padding: 0;
+  display: flex;
+  width: 100%;
+  list-style-type: none;
+  transform: translateX(calc(-1 * var(--current-page) * 100vw));
+  transition: transform 300ms ease-in-out;
+}
+
+.carousel__list_item{
+  flex-shrink: 0;
+  width: var(--item-width);
+  height: calc(1.2 * var(--item-width));
+}
+
+.clip{
+  width: 80%;
+  margin: 2rem auto;
+  height: 100%;
+  overflow: hidden;
+  padding: 0.625rem 0;
+  background: #ffffff;
+  border-radius: 0.25rem;
+  display: flex;
+  flex-direction: column;
+  transition: all 300ms ease-in-out;
+}
+
+.clip:hover{
+  transform: scale(1.05);
+  background-color: #ffb4b4;
+}
+
+.clip__image_container{
+  position: relative;
+}
+
+.clip__image{
+  width: 100%;
+  height: auto;
+}
+
+.clip__title{
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  left: 0;
+  width: 100%;
+}
+
+.clip__title a{
+  line-height: 1;
+  color: #ffffff;
+  padding: 0.5rem 1rem 0.75rem;
+  background-color: #106544;
+  display: block;
+  overflow: hidden;
+  outline: none;
+  font-weight: 700;
+  transition: color 300ms ease-in-out,
+    background-color 300ms ease-in-out;
+}
+
+.clip__title a:hover{
+  color: #ff3131;
+}
+
+.clip__title a:focus-within{
+  background-color: #12c07d;
+}
+
+.clip__texts{
+  padding: 0.625rem 1rem;
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+}
+
+.has-icon{
+  padding-left: 1.5rem;
+  position: relative;
+  text-align: center;
+  font-weight: 600;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  line-height: 1.6;
+}
+
+.has-icon::before{
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 1rem;
+  height: 1rem;
+  background-position: center;
+  background-size: contain;
+  background-repeat: no-repeat;
+}
+
+.clip__chanel::before{
+  background-image: url('../../assets/img/man-user.svg');
+}
+
+.clip__published::before{
+  background-image: url('../../assets/img/calendar.svg');
+}
+
+.clip__views::before{
+  background-image: url('../../assets/img/eye.svg');
+}
+
+.clip__description{
+  flex: 1;
+  position: relative;
+  overflow: hidden;
+  font-style: italic;
+  text-align: justify;
+  word-break: break-word;
 }
